# awesome-cc

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  ask-mode.md  pyproject.toml
commands/: code-review.md  commit.md  make-command.md  proactive-ask.md  prompt-engineer.md
docs/superpowers/plans/: 2026-03-16-interactive-mode-redesign.md
docs/superpowers/specs/: 2026-03-16-interactive-mode-redesign.md
scripts/: sync_pyproject.py
skills/ask-mode/: SKILL.md
skills/codex-exec/: SKILL.md
skills/codex-review/: SKILL.md
skills/codex-review/evals/: evals.json
skills/codex-review/scripts/: detect-base-branch.sh  review-code.sh  review-plan.sh
skills/dao-mode/: SKILL.md
skills/opencode-docs/: SKILL.md
skills/orchestrate/: SKILL.md
skills/orchestrate/references/: subagent-prompt-template.md  teammate-prompt-template.md
skills/proactive-ask/: SKILL.md
skills/telegram-notify/: README.md  SKILL.md  telegram-notify.py
skills/uv/assets/pyproject_templates/: advanced.toml  basic.toml  gitlab.toml
skills/uv/assets/script_examples/: data_analysis.py
skills/uv/references/: configuration.md
src/awesome_cc/: __init__.py  cli.py  discovery.py  installer.py  models.py  ui.py
